fixing horizontal scroll cat game

--- a/installatie-games/cat-game.css
+++ b/installatie-games/cat-game.css
@@ -1,6 +1,6 @@
 html,
 body {
-    touch-action: none;
+    touch-action: pan-y;
     background-color: #A97C50;
 }
 
